css fix for logo on mobile device.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,3 +18,7 @@
 nav.navbar .navbar-brand {
   display: none;
 }
+
+nav.navbar.bootsnav .navbar-brand {
+  display: none !Important;
+}
